<resources>
    <string name="app_name">App Movie</string>

    <!--    Generic-->
    <string name="txt_name_empty">Digite seu Nome</string>
    <string name="txt_email_empty">Digite seu Email</string>
    <string name="txt_phone_empty">Digite seu Telefone</string>
    <string name="txt_password_empty">Digite sua Senha</string>
    <string name="txt_amount_empty">Digite o valor da recarga maior ou igual a R$ 10,00.</string>
    <string name="txt_confirm_password_empty">As senhas devem ser iguais.</string>
    <string name="txt_confirm_empty">É necessário confirmar a senha.</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="txt_email_or_password_empty">Todos os campos devem ser preenchidos.</string>
    <string name="txt_formated_value">R$ %1$s</string>
    <string name="txt_user_photo_empty_fragment">%1$s %2$s</string>

    <!--    HomeAuthFragment-->
    <string name="title_home_auth_fragment">Entrar com</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continuar com o Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continuar com o Google</string>
    <string name="text_social_or_password_home_auth_fragment">ou</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Entrar com senha</string>
    <string name="text_dont_have_an_account_home_auth_fragment">Não tem uma conta?</string>
    <string name="text_sign_up_home_auth_fragment">Inscrever-se</string>

    <!--    RegisterFragment-->
    <string name="title_register_fragment">Crie sua conta</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>
    <string name="text_continue_social_network_register_fragment">ou continuar com</string>
    <string name="text_already_account_register_fragment">já tem uma conta?</string>
    <string name="text_button_sign_in_register_fragment">Entrar</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>
    <string name="txt_register_fragment_success">Cadastro realizado com sucesso</string>

    <!--    LoginFragment-->
    <string name="title_login_fragment">Faça login na sua conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_continue_social_network_login_fragment">ou continuar com</string>
    <string name="txt_email_login_invalid">Digite um endereço de email válido.</string>
    <string name="txt_password_empty_login_fragment">Digite sua senha</string>


    <!--    ForgotFragment-->
    <string name="title_forgot_fragment">Crie sua nova senha</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recuperar conta</string>
    <string name="txt_email_forgot_invalid">Digite um endereço de email válido.</string>
    <string name="txt_email_forgot_send_success">Email enviado com Sucesso.</string>


    <!--    Error Firebase Authentication -->
    <string name="account_not_registered_register_fragment">Dados invalidos. Por favor, verificar as informações digitadas.</string>
    <string name="invalid_email_register_fragment">Insira um email válido.</string>
    <string name="email_in_use_register_fragment">Este email já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="email_password_login_error">Verifique se as informações foram digitadas corretamente.</string>
    <string name="txt_email_send_recover_error">Por favor, inserir o email cadastrado.</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_search">Pesquisar</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="title_menu_download">Downloads</string>
    <string name="title_menu_profile">Perfil</string>

    <!--    TabLayout-->
    <string name="title_trailers_tab_layout">Trailers</string>
    <string name="title_similar_tab_layout">Similares</string>
    <string name="title_Comments_tab_layout">Comentários</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    MovieGenreFragment -->
    <string name="txt_show_all_category">Ver Todos</string>
    <string name="txt_search_hint">Pesquisar</string>
    <string name="txt_all_genres_movie_detail"> Genêro: %1$s</string>

    <!--    SearchFragment-->
    <string name="txt_title_empty_search_fragment">Não encontrado</string>
    <string name="txt_message_empty_search_fragment">Desculpe, a palavra-chave que você digitou não foi encontrada. Tente verificar novamente ou pesquise com outras palavras-chave.</string>

    <!--    DownloadFragment-->
    <string name="txt_title_download">Download</string>
    <string name="txt_title_message_empty_state_download">Sua Lista está vazia.</string>
    <string name="txt_message_empty_search_download">Parece que você não realizou o Download de nenhum filme.</string>


    <!--    DialogFragment-->
    <string name="txt_message_dialog_downloading">Filmes ainda baixando...\nAguarde ou oculte o processo</string>
    <string name="txt_hide_dialog_downloading">Esconder</string>
    <string name="txt_downloaded_size_dialog_downloading">%1$s / %2$s</string>
    <string name="txt_download_progress_dialog_downloading">%1$d%%</string>
    <string name="txt_btn_download">Download</string>


    <!--    BottomSheetDeleteMovie-->
    <string name="txt_title_delete_movie">Delete</string>
    <string name="txt_message_delete_bottom_sheet">Tem certeza de que deseja excluir o download deste filme?</string>
    <string name="txt_btn_cancel_bottom_sheet">Cancelar</string>
    <string name="txt_btn_confirm_bottom_sheet">Sim, Deletar</string>

    <!--    ProfileFragment-->
    <string name="text_edit_profile_profile_fragment">Editar perfil</string>
    <string name="text_notificate_profile_fragment">Notificações</string>
    <string name="text_download_profile_fragment">Downloads</string>
    <string name="text_security_profile_fragment">Segurança</string>
    <string name="text_language_profile_fragment">Idioma</string>
    <string name="text_dark_mode_profile_fragment">Modo Escuro</string>
    <string name="text_helper_center_profile_fragment">Centro de ajuda</string>
    <string name="text_privacy_policy_profile_fragment">Política de privacidade</string>
    <string name="text_logout_profile_fragment">Sair</string>

    <!--    EditProfileFragment - XML -->
    <string name="txt_hint_name_edit_profile_fragment">nome</string>
    <string name="txt_hint_surname_edit_profile_fragment">sobrenome</string>
    <string name="txt_hint_phone_edit_profile_fragment">telefone</string>
    <string name="txt_hint_genre_edit_profile_fragment">gênero</string>
    <string name="txt_hint_country_edit_profile_fragment">país</string>
    <string name="txt_button_update_edit_profile_fragment">Atualizar</string>

    <!--    EditProfileFragment -->
    <string name="txt_name_empty_edit_profile_fragment">Digite o seu nome</string>
    <string name="txt_surnane_empty_edit_profile_fragment">Digite o seu sobrenome</string>
    <string name="txt_phone_invalid_edit_profile_fragment">Digite um número válido</string>
    <string name="txt_genreEdit_empty_profile_fragment">Digite seu gênero</string>
    <string name="txt_country_empty_edit_profile_fragment">Digite seu país</string>
    <string name="txt_update_message_edit_profile_success">Dados atualizado com sucesso</string>

    <!--    BottomSheetLogoutMovie-->
    <string name="txt_title_bottom_sheet_logout">Sair</string>
    <string name="txt_message_bottom_sheet_logout">Tem certeza que deseja sair?</string>
    <string name="txt_cancel_button_bottom_sheet_logout">Cancelar</string>
    <string name="txt_confirm_button_bottom_sheet_logout">Sim, sair!</string>

    <!--    BottomSheetPermissionGallery&Camera-->
    <string name="txt_title_bottom_permission">Permissão Negada</string>
    <string name="txt_message_bottom_permission">Para acessar este  recurso, você precisa aceitar a permissão. </string>
    <string name="txt_cancel_button_bottom_permission">Cancelar</string>
    <string name="txt_confirm_button_bottom_permission">Aceitar</string>

</resources>