<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.main.bottombar.profile.edit.EditProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ThemeToolbarSimpleSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/ToolbarTitleAppearance"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/text_edit_profile_profile_fragment"
            android:textColor="#212121"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/movie"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/img_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:elevation="2dp"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

            </FrameLayout>


            <EditText
                android:id="@+id/edit_name_profile"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/txt_hint_name_edit_profile_fragment"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_surName_profile"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/txt_hint_surname_edit_profile_fragment"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_email_profile"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:drawableEnd="@drawable/ic_email"
                android:clickable="false"
                android:enabled="false"
                android:textColor="@color/disabled"
                tools:text="antonio_dahora@hotmail.com"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/edit_phone_profile"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/txt_hint_phone_edit_profile_fragment"
                android:inputType="phone"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_genre_profile"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/txt_hint_genre_edit_profile_fragment"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_country_profile"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/txt_hint_country_edit_profile_fragment"
                android:inputType="text"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_update"
                style="@style/ThemePrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/txt_button_update_edit_profile_fragment"
                app:backgroundTint="@null" />

            <ImageView
                android:id="@+id/progressLoading_update"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="32dp"
                android:visibility="invisible"
                tools:src="@drawable/loading"
                tools:visibility="visible" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>