<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingHorizontal="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/image_header_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heade_bottom_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_logout_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/urbanist_700"
        android:text="@string/txt_title_bottom_permission"
        android:textColor="#F75555"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_header_bottom" />

    <include
        android:id="@+id/divider"
        layout="@layout/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_logout_bottom" />

    <TextView
        android:id="@+id/txt_message_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/urbanist_700"
        android:text="@string/txt_message_bottom_permission"
        android:textAlignment="center"
        android:textColor="#424242"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/ThemeSecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:text="@string/txt_cancel_button_bottom_sheet_logout"
        app:backgroundTint="#FCE7E9"
        app:layout_constraintEnd_toStartOf="@+id/btn_accept"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_message_bottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        style="@style/ThemePrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="6dp"
        android:text="@string/txt_confirm_button_bottom_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/txt_message_bottom" />


</androidx.constraintlayout.widget.ConstraintLayout>