<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".presenter.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login_fragment"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            android:textColor="#212121"
            android:fontFamily="@font/urbanist_700"
            app:layout_constraintTop_toBottomOf="@id/logo_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edit_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:inputType="textEmailAddress"
            style="@style/ThemeEditText"
            android:hint="@string/text_hint_edit_email_login_fragment"
            app:layout_constraintTop_toBottomOf="@id/title_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edit_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeEditText"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/text_hint_edit_password_login_fragment"
            app:layout_constraintTop_toBottomOf="@id/edit_email_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/ThemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/text_button_sign_in_register_fragment"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_login" />

        <TextView
            android:id="@+id/btn_forgot_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password_login_fragment"
            android:textColor="@color/color_default"
            android:fontFamily="@font/urbanist_600"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:layout_margin="24dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_forgot_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#EEEEEE"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/urbanist_600"
                android:textColor="#616161"
                android:text="@string/text_continue_social_network_register_fragment"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#EEEEEE"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/image_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"
                android:background="@drawable/bg_border"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"/>


            <ImageView
                android:id="@+id/image_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_border"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>